[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Day5Controller.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenuButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Main Menu"

[node name="Puzzle1Button" type="Button" parent="."]
margin_top = 90.0
margin_right = 83.0
margin_bottom = 110.0
text = "Puzzle 1"

[node name="Puzzle2Button" type="Button" parent="."]
margin_top = 120.0
margin_right = 83.0
margin_bottom = 140.0
text = "Puzzle 2"

[node name="Puzzle1Label" type="Label" parent="."]
margin_left = 100.0
margin_top = 90.0
margin_right = 200.0
margin_bottom = 104.0
text = "?"

[node name="Puzzle2Label" type="Label" parent="."]
margin_left = 100.0
margin_top = 120.0
margin_right = 200.0
margin_bottom = 134.0
text = "?"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Puzzle1Button" to="." method="_on_Puzzle1Button_pressed"]
[connection signal="pressed" from="Puzzle2Button" to="." method="_on_Puzzle2Button_pressed"]
